add descr in package.json

--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
   "keywords": [],
   "author": "Deemon13",
   "license": "ISC",
-  "description": ""
+  "description": "Small app for changing background color of body by clicking on button"
 }
